--- a/web/index.html
+++ b/web/index.html
@@ -21,15 +21,15 @@
   <meta name="description" content="A new Flutter project.">
 
   <!-- iOS meta tags & icons -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="test_app">
+  <meta name="apple-mobile-web-app-title" content="virtual_fitting_room">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>test_app</title>
+  <title>virtual_fitting_room</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
